# Open-Persona

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LAUNCH_CHECKLIST.md  README.md  conftest.py  docker-compose.yml  docs  livekit.dev.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml
deploy/: .env.production.example  Caddyfile.example  FLY_DEPLOY.md  docker-compose.production.yml  fly.toml
paper/: main.tex  refs.bib
paper/chapters/: 00_titlepage.tex  01_acknowledgements.tex  02_abstract.tex  03_acronyms.tex  10_introduction.tex  20_background.tex  30_architecture.tex  40_mechanisms.tex  50_methodology.tex  60_replication.tex  70_mechanism_results.tex  80_ablations.tex  90_discussion.tex  95_limitations.tex  99_conclusion.tex  A1_persona_schema.tex  A2_probe_taxonomy.tex
scripts/: ci-local.sh  devenv.sh  pre-push.hook
