[project]
name = "persona-workspace"
version = "0.1.0"
description = "Persona monorepo workspace"
requires-python = ">=3.11"
# Root depends on every workspace member so a plain `uv sync` installs the
# whole monorepo into one virtualenv. Without this, members' deps only land
# when `uv sync --all-packages` is run — easy to forget, blocks mypy/pytest.
dependencies = [
    "persona-core",
    "persona-runtime",
    "persona-api",
]

[tool.uv.workspace]
members = ["packages/core", "packages/runtime", "packages/api"]

[tool.uv.sources]
persona-core = { workspace = true }
persona-runtime = { workspace = true }
persona-api = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<7",
    "pre-commit>=3.7,<5",
    "types-PyYAML>=6,<7",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "PT", "RET", "SIM", "TCH", "ARG", "PTH", "ERA"]
# ANN101/ANN102 (missing-type-annotation-for-{self,cls}) were removed from
# modern ruff but the pre-commit hook is pinned to ruff v0.5.0 which still
# enforces them. Ignoring both here keeps `uv run ruff` and `pre-commit`
# in sync. Remove the ignores when we bump the pre-commit rev.
ignore = ["COM812", "ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/runtime/tests", "packages/api/tests"]
markers = [
    "integration: marks tests that require external services (Docker, real DB)",
    "external: marks tests that call real external APIs (Anthropic, OpenAI)",
    "contract: marks protocol contract compliance tests",
]
addopts = "-v --tb=short -m 'not integration and not external'"
